updated settings. moved blog to april 1

--- a/_posts/2025-04-01-mcp.md
+++ b/_posts/2025-04-01-mcp.md
@@ -1,6 +1,9 @@
 ---
 title: "Understanding the Model Context Protocol (MCP): A Game-Changer for AI Integration"
 date: 2025-04-01
+tags:
+  - LLM
+  - MCP
 ---
 
 Imagine a world where your AI assistant can instantly connect to anything—your personal files, company databases, or even the latest news—all without any complicated setup. Sounds like magic, right? Well, that’s exactly what the **Model Context Protocol (MCP)** promises to do! It’s a new, open standard that’s making it super easy for AI to talk to data and tools, and it’s already shaking up the tech world.
