fix: correct author metadata and format code blocks in prime number optimization post

--- a/_posts/2025-05-25-prime.md
+++ b/_posts/2025-05-25-prime.md
@@ -6,9 +6,9 @@ tags:
   - Optimization
   - Performance
   - Algorithms
----
+author: "Arun"
 
-# 🚀 From Hours to Milliseconds: A Journey Through Code Optimization
+---
 
 Every developer writes a brute-force solution at some point — often just to get things working.  
 But what if that **quick-and-dirty function** was silently tanking your performance?
@@ -34,6 +34,7 @@ def is_prime(n: int):
         if n % i == 0:
             factors_count += 1
     return factors_count == 2
+```
 
 🔻 What’s wrong here?
 It checks every number from 1 to n.
@@ -43,6 +44,7 @@ Try this with 10,000 numbers? Pack a lunch.
 
 ⚙️ Step 3: Basic Divisibility
 
+```python
 def is_prime(n: int):
     if n <= 1:
         return False
@@ -50,6 +52,7 @@ def is_prime(n: int):
         if n % i == 0:
             return False
     return True
+```
 
 ✅ Exits early on the first divisor — a decent start, but still O(n).
 
@@ -57,6 +60,7 @@ def is_prime(n: int):
 
 ⚡ Step 4: Skip Even Numbers
 
+```python
 def is_prime(n: int):
     if n <= 1:
         return False
@@ -68,6 +72,7 @@ def is_prime(n: int):
         if n % i == 0:
             return False
     return True
+```
 
 🧠 Insight: Half the numbers are even. Skip them.
 
@@ -77,6 +82,7 @@ Result: ~2× faster in practice.
 
 🧮 Step 5: Square Root Optimization
 
+```python
 import math
 
 def is_prime(n: int):
@@ -90,13 +96,15 @@ def is_prime(n: int):
         if n % i == 0:
             return False
     return True
-
+```
+    
 🏃‍♂️ Loop now runs √n times, not n. That’s a massive upgrade.
 
 ⸻
 
 🧠 Step 6: The 6k ± 1 Trick
 
+```python
 def is_prime(n: int):
     if n <= 1:
         return False
@@ -110,6 +118,7 @@ def is_prime(n: int):
             return False
         i += 6
     return True
+```
 
 💡 Why this works: All primes > 3 are of the form 6k ± 1.
 Fewer checks = faster results.
